--- a/tecla-connect/package.json
+++ b/tecla-connect/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.1.3",
     "@coreui/coreui": "^3.4.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.17",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
