--- a/tecla-connect/angular.json
+++ b/tecla-connect/angular.json
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "tecla-connect"
+  "defaultProject": "tecla-connect",
+  "cli": {
+    "analytics": false
+  }
 }
